# rustyllm

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
examples/: async_h2d_phase2.rs  async_h2d_phase3.rs  async_h2d_spike.rs  bench_parallel_linear.rs  bench_q4_kernel.rs  bench_streaming_70b.rs  bench_streaming_70b_async.rs  bench_streaming_70b_q4.rs  generate.rs  quantize_and_free.rs  requantize_mixed.rs  smoke_inference.rs  smoke_inference_70b.rs  smoke_streaming.rs  smoke_streaming_70b.rs  spec_decode_70b.rs
src/: async_upload.rs  error.rs  family.rs  inference.rs  lib.rs  parallel_linear.rs  prepare.rs  q4_kernel.rs  quantize.rs  shard.rs  streaming.rs  streaming_baichuan.rs  streaming_chatglm.rs  streaming_family.rs  streaming_mixtral.rs  streaming_quantized.rs
